src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Funding Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Return %</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Available_Amount__c</columns>
        <columns>Return__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Published__c</columns>
        <columns>Active__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>